--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
-{   "homepage": "https://kumarnitinsingh.github.io/technews",
-  "name": "headlines",
+{
+  "homepage": "https://kumarnitinsingh.github.io/technews",
+  "name": "technews",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.0.3",
+    "gh-pages": "^3.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
     "tachyons": "^4.12.0"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
